2007-08-15  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added new patch.
	* Makefile.in: Regenerated
	* README: Added license header information
	* patches/icedtea-license-headers.patch: New patch to patch scripts to 
	use GPL	license header instead of proprietary one.

2007-08-15  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am: Refactor.
	* Makefile.in: Regenerate.
	* INSTALL: Update build documentation.
	* patches/icedtea-ecj-bootstrap.patch: Rebase for openjdk-ecj.
	* rt/sun/org/mozilla/internal/NativeJavaArray.java: Move to...
	* rt/sun/org/mozilla/javascript/internal/NativeJavaArray.java: New
	file.

2007-08-14  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/crypto/jce/GnuCrypto.java: Added Cipher Alias for
	PBEWithMD5AndDES.
	* jce/gnu/javax/crypto/jce/cipher/PBE.java: Added checks for
	unspecified values.
	* jce/javax/crypto/spec/PBEKeySpec.java: Fixed constructors according
	to API.

2007-08-14  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-copy-plugs.patch: Removed patch to add Wrapper
	import.
	* rt/com/sun/script/javascript/NativeJavaClass.java: Fixed Wrapper
	import.
	* rt/sun/org/mozilla/javascript/internal/Wrapper.java: New file.
	* rt/javax/script/Wrapper.java: Moved file to correct location.

2007-08-13  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-ecj-bootstrap.patch: Remove bootstrap requirement
	for graphics.
	* INSTALL: Updated.

2007-08-09  Andrew Haley  <aph@redhat.com>

	* jce/gnu/javax/crypto/jce/DiffieHellmanImpl.java (engineDoPhase):
	Don't check the length of the divisors.

2007-08-08  Francis Kung  <fkung@redhat.com>

	* rt/java/awt/image/Raster.java: Use given dataBuffers when creating
	new rasters.

2007-08-08  Francis Kung  <fkung@redhat.com>

	* INSTALL: Updated build dependencies.

2007-08-08  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-antialias.patch: Fix text antialiasing artifacts.

2007-08-03  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Re-add buildfix patch.