@@ -1,3 +1,8 @@
+2007-08-16  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Removed targets to generated properties files. 
+	* Makefile.in: Regenerated.
+
 2007-08-15  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am: Added new patch.
